# we-tauri

./: .editorconfig  .env.example  .eslintrc  .gitignore  .running  6b93af1d.css  8a5db1ac.js  CHANGELOG.md  Cargo.toml  DESIGN.md  README.md  b64images.ts  b8fedbf83.js  build.js  default.nix  devhub-wds.mjs  flake.nix  index.html  index.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  remove-line.js  rollup.config.mjs  shoelace-adapter.css  tokens.json  tsconfig.base.json  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
.husky/: pre-commit
.storybook/: main.cjs  main.js  main.ts  manager.ts  preview-head.html  preview.ts
aliens/: index.html
applet-dev-workspace/: .gitignore  README.md
client/: CHANGELOG.md  README.md  package.json  tsconfig.json
crates/attachments/: Cargo.toml
crates/attachments/src/: lib.rs
crates/test_applets/: Cargo.toml  README.md  tauri.conf.json
crates/test_applets/src/: cli.rs
design-system/: .gitignore  README.md  package.json  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.build.json  tsconfig.json  vite.config.js  vite.config.ts
dev-util/: package.json  tsconfig.json  (+2 more)
dna/coordinator_zomes/sensemaker/: Cargo.toml
dna/coordinator_zomes/sensemaker/src/: assessment.rs  dimension.rs  lib.rs  method.rs  range.rs
dna/integrity_zomes/sensemaker_integrity/: Cargo.toml
dna/integrity_zomes/sensemaker_integrity/src/: assessment.rs  cultural_context.rs  dimension.rs  lib.rs  method.rs  range.rs  resource_type.rs
dna/integrity_zomes/sensemaker_integrity/src/range/: definition.rs
dna/integrity_zomes/test_provider_integrity/: Cargo.toml
dna/zomes/file_storage/: Cargo.toml
dna/zomes/file_storage/src/: lib.rs
dnas/group/zomes/coordinator/custom_views/: Cargo.toml
dnas/group/zomes/coordinator/custom_views/src/: all_custom_views.rs  custom_view.rs  lib.rs
dnas/group/zomes/coordinator/custom_views/tests/: all_custom_views.rs  custom_view.rs
dnas/group/zomes/coordinator/custom_views/tests/common/: mod.rs
dnas/group/zomes/coordinator/group/: Cargo.toml
dnas/group/zomes/coordinator/group/src/: applets.rs  lib.rs  related_groups.rs
dnas/group/zomes/coordinator/group/tests/: create_and_join_applet.rs  create_applet.rs  store_and_delete_private_applet.rs
dnas/group/zomes/coordinator/membrane_invitations/: Cargo.toml
dnas/group/zomes/coordinator/membrane_invitations/src/: lib.rs
dnas/group/zomes/coordinator/peer_status/: Cargo.toml
dnas/group/zomes/coordinator/profiles/: Cargo.toml
dnas/group/zomes/integrity/group/: Cargo.toml
dnas/group/zomes/integrity/group/src/: lib.rs
dnas/group/zomes/integrity/profiles/: Cargo.toml
dnas/lobby/zomes/applet_guis/: Cargo.toml
dnas/lobby/zomes/applet_guis/src/: lib.rs
dnas/lobby/zomes/applet_guis/tests/: commit_gui.rs
dnas/lobby/zomes/coordinator/applet_guis/: Cargo.toml
dnas/lobby/zomes/coordinator/applet_guis/src/: lib.rs
dnas/lobby/zomes/coordinator/applet_guis/tests/: commit_gui.rs
dnas/lobby/zomes/coordinator/membrane_invitations/: Cargo.toml
dnas/lobby/zomes/coordinator/membrane_invitations/src/: lib.rs
dnas/lobby/zomes/integrity/applet_guis/: Cargo.toml
dnas/lobby/zomes/integrity/applet_guis/src/: lib.rs
dnas/lobby/zomes/integrity/membrane_invitations/: Cargo.toml
dnas/lobby/zomes/integrity/membrane_invitations/src/: lib.rs
dnas/lobby/zomes/membrane_invitations/: Cargo.toml
dnas/lobby/zomes/membrane_invitations/src/: lib.rs
dnas/sensemaker/zomes/coordinator/sensemaker/: Cargo.toml
dnas/sensemaker/zomes/coordinator/sensemaker/src/: agent.rs  applet.rs  assessment.rs  cultural_context.rs  dimension.rs  init.rs  lib.rs  method.rs  range.rs  resource_def.rs  resource_type.rs  sensemaker_config.rs  signals.rs  utils.rs
dnas/sensemaker/zomes/coordinator/widgets/: Cargo.toml
dnas/sensemaker/zomes/coordinator/widgets/src/: assessment_widget_config_block.rs  assessment_widget_registration.rs  lib.rs
dnas/sensemaker/zomes/integrity/sensemaker/: Cargo.toml
dnas/sensemaker/zomes/integrity/sensemaker/src/: applet.rs  assessment.rs  cultural_context.rs  dimension.rs  lib.rs  method.rs  properties.rs  range.rs  resource_def.rs  resource_type.rs  util.rs
dnas/sensemaker/zomes/integrity/widgets/: Cargo.toml
dnas/sensemaker/zomes/integrity/widgets/src/: lib.rs
dnas/test_provider/zomes/coordinator/test_provider/: Cargo.toml
dnas/test_provider/zomes/coordinator/test_provider/src/: lib.rs  post.rs
dnas/we/zomes/applets/: Cargo.toml
dnas/we/zomes/applets/src/: error.rs  lib.rs
dnas/we/zomes/applets/tests/: create_applet.rs
dnas/we/zomes/games/: Cargo.toml
dnas/we/zomes/games/src/: error.rs  lib.rs
dnas/we/zomes/we/: Cargo.toml
dnas/we/zomes/we/src/: lib.rs
example/: Cargo.toml
example/dnas/forum/workdir/: dna.yaml
example/dnas/forum/zomes/coordinator/posts/: Cargo.toml
example/dnas/forum/zomes/coordinator/posts/src/: all_posts.rs  lib.rs  post.rs
example/dnas/forum/zomes/coordinator/posts/tests/: all_posts.rs  post.rs
example/dnas/forum/zomes/coordinator/posts/tests/common/: mod.rs
example/dnas/forum/zomes/integrity/posts/: Cargo.toml
example/dnas/forum/zomes/integrity/posts/src/: lib.rs  post.rs
example/ui/: index.html  package.json  vite.config.ts
example/ui/demo/: index.html
example/ui/src/: applet-main.ts  context.ts  cross-applet-main.ts  example-applet.ts  index.ts  posts-client.ts  posts-store.ts  types.ts
example/ui/src/elements/: all-posts.ts  create-post.ts  edit-post.ts  post-detail.ts  post-summary.ts  posts-context.ts
example/workdir/: happ.yaml  web-happ.yaml
src-tauri/: .gitignore  Cargo.toml  Info.plist  report.html  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: applet_iframes.rs  config.rs  default_apps.rs  error.rs  filesystem.rs  launch.rs  lib.rs  logs.rs  main.rs  menu.rs  state.rs  system_tray.rs  test_applets.rs  window.rs
src-tauri/src/commands/: conductor_info.rs  devhub.rs  factory_reset.rs  install_applet.rs  install_applet_bundle.rs  join_group.rs  mod.rs  notification.rs  password.rs  sign_zome_call.rs  window.rs
(+1075 files in other folders)
