[workspace]
members = [
  "dnas/*/zomes/coordinator/*",
  "dnas/*/zomes/integrity/*",
  "crates/*",
  "src-tauri",
]
resolver = "2"

[profile.dev]
opt-level = "z"

[profile.release]
incremental = false
codegen-units = 1
panic = "abort"
opt-level = "s"
lto = true


[workspace.dependencies]
hdi = { version = "0.3.3-beta-rc.0" }
hdk = { version = "0.2.3-beta-rc.0" }
serde = "1"
holochain = { version = "0.2.3-beta-rc.1" }
we_types = { path = "crates/types" }
