[workspace]
members = [
  "dnas/lobby/zomes/coordinator/*",
  "dnas/lobby/zomes/integrity/*",
  "dnas/we/zomes/coordinator/*",
  "dnas/we/zomes/integrity/*",
]
resolver = "2"

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace.dependencies]
hdi = { version = "0.3.0" }
hdk = { version = "0.2.0" }
serde = "1"
holochain = {version = "0.2.0"}
fixt = { version = "0.2.2" }
