[package]
name = "we-alpha"
version = "0.2.1"
description = "An alternative Holochain runtime focused on groups."
authors = [
  "eric@harris-braun.com",
  "matthme@protonmail.com",
  "guillem.cordoba@gmail.com",
]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "=1.4", features = [] }

[dependencies]
tauri = { version = "=1.4", features = ["cli", "clipboard-write-text", "http-all", "icon-png", "notification", "process-command-api", "protocol-all", "shell-open", "system-tray"] }
tauri-plugin-deep-link = "0.1"

anyhow = "1"
opener = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.17"
serde_json = "1.0"
futures = "0.3"
log = "0.4.14"
log4rs = "1.0.0"
portpicker = "0.1"
tempdir = "0.3.7"
thiserror = "1"

holochain_client = { git = "https://github.com/holochain/holochain-client-rust/", branch = "holochain-0.2.1"}
holochain_state = "=0.2.1"
holochain_websocket = "=0.2.1"
holochain = "=0.2.1"
holochain_types = "=0.2.1"
holochain_zome_types = "=0.2.1"
holochain_integrity_types = "=0.2.1"
sodoken = "=0.0.9"
mr_bundle = "=0.2.1"
either = "*"
url = "2.2"
url2 = "0.0.6"

base64 = "0.21"

mime_guess = "2.0.4"

hyper = { version = "0.14.27", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0-rc.2"
bytes = "1"

zip = "0.5"

hc_crud_caps = "0.9.0"
devhub_types = { git = "https://github.com/holochain/devhub-dnas", rev = "8ad6faaaa965dfdaccbf25a6947086680acf0fa7" }
appstore_types = { git = "https://github.com/holochain/app-store-dnas", rev = "893a83a774d129eaa556da5fd46cce9a6bb88b4b" }
appstore = { git = "https://github.com/holochain/app-store-dnas", rev = "893a83a774d129eaa556da5fd46cce9a6bb88b4b" }
hc_portal_types = { git = "https://github.com/holochain/portal-dna", rev = "14ad357ae42ee7451848a249a7e32acb40519dbc" }

essence_payloads = "0.1"

holochain_launcher_utils = { git = "https://github.com/holochain/launcher", branch = "we-hc-0.2.1" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
