[package]
name = "we-alpha"
version = "0.3.2"
description = "An alternative Holochain runtime focused on groups."
authors = [
  "eric@harris-braun.com",
  "matthme@protonmail.com",
  "guillem.cordoba@gmail.com",
]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "=1.4", features = [] }

[dependencies]
tauri = { version = "=1.4", features = ["cli", "clipboard-write-text", "http-all", "icon-png", "notification", "process-command-api", "protocol-all", "shell-open", "system-tray"] }
tauri-plugin-deep-link = "0.1"

anyhow = "1"
opener = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.17"
serde_json = "1.0"
futures = "0.3"
log = "0.4.14"
log4rs = "1.0.0"
portpicker = "0.1"
tempdir = "0.3.7"
thiserror = "1"

holochain_client = "0.4.2"
holochain_state = "=0.2.2"
holochain_websocket = "=0.2.2"
holochain = "=0.2.2"
holochain_types = "=0.2.2"
holochain_zome_types = "=0.2.2"
holochain_integrity_types = "=0.2.2"
sodoken = "=0.0.9"
mr_bundle = "=0.2.2"
either = "*"
url = "2.2"
url2 = "0.0.6"

base64 = "0.21"

mime_guess = "2.0.4"

hyper = { version = "0.14.27", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0-rc.2"
bytes = "1"

zip = "0.5"

hc_crud_caps = { git = "https://github.com/mrruby/rust-hc-crud-caps", rev = "2c5494834d8ba55bb3f5d1f30352e35cee947513"}
devhub_types = { git = "https://github.com/mrruby/devhub-dnas" }
appstore_types = { git = "https://github.com/matthme/app-store-dnas", branch = "holochain-0.2.2" }
appstore = { git = "https://github.com/matthme/app-store-dnas", branch = "holochain-0.2.2" }
hc_portal_types = { git = "https://github.com/matthme/portal-dna", branch = "holochain-0.2.2" }
mere_memory_types = { git = "https://github.com/mrruby/hc-zome-mere-memory" }


essence_payloads = "0.1"

holochain_launcher_utils = { git = "https://github.com/holochain/launcher", branch = "we-hc-0.2.2" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
