[package]
authors = ["guillem.cordoba@gmail.com"]
edition = "2021"
name = "attachments"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "attachments"

[dependencies]

attachments_integrity = { path = "../attachments_integrity" }

hdk = { workspace = true }
serde = { workspace = true }
