[package]
authors = ["guillem.cordoba@gmail.com"]
edition = "2021"
name = "hc_zome_attachments_coordinator"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_attachments_coordinator"

[dependencies]

hc_zome_attachments_integrity = { path = "../attachments_integrity" }

hdk = { workspace = true }
serde = { workspace = true }
