[package]
authors = ["eric@harris-braun.com"]
edition = "2018"
name = "applet_guis"
version = "0.0.1-alpha1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "applet_guis"

[dependencies]
chrono = {version = "0.4", features = ['alloc', 'std']}
derive_more = "0.99"
serde = "1.0.123"
thiserror = "1.0.20"
hdk = {version = "0.0.136", features = ["encoding"]}

[dev-dependencies]
#holochain = { git = "https://github.com/holochain/holochain.git", branch = "develop", features = ["test_utils"] }
#holochain_types = { git = "https://github.com/holochain/holochain.git", branch = "develop", features = ["test_utils"] }
# holochain = { path = "../../../chain/crates/holochain/"}
# holochain_types = { path = "../../../chain/crates/holochain_types/"}
nanoid = "0.3"
observability = "0.1.2"
stream-cancel = "0.8.0"
fixt = "0.0.11"
futures = {version = "0.3.1", default-features = false}
hdk = {version = "0.0.136", features = ["encoding", "test_utils"]}
holochain = {version = "0.0.143", default-features = false, features = ["test_utils"]}
tokio = {version = "1.3", features = ["full"]}
