[package]
authors = ["eric@harris-braun.com"]
edition = "2018"
name = "applets"
version = "0.0.1-alpha1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "applets"

[dependencies]
derive_more = "0.99"
hdk = {version = "0.0.136", features = ["encoding"]}
serde = "1"
thiserror = "1.0.20"

[dev-dependencies]
fixt = "0.0.11"
futures = {version = "0.3.1", default-features = false}
hdk = {version = "0.0.136", features = ["encoding", "test_utils"]}
holochain = {version = "0.0.143", default-features = false, features = ["test_utils"]}
tokio = {version = "1.3", features = ["full"]}
