[package]
authors = ["eric@harris-braun.com"]
edition = "2018"
name = "games"
version = "0.0.1-alpha1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "games"

[dependencies]
derive_more = "0.99"
serde = "1"
thiserror = "1.0.20"
hdk = {version = "0.0.127", features = ["encoding"]}

[dev-dependencies]
#holochain = { git = "https://github.com/holochain/holochain.git", branch = "develop", features = ["test_utils"] }
#holochain_types = { git = "https://github.com/holochain/holochain.git", branch = "develop", features = ["test_utils"] }
# holochain = { path = "../../../chain/crates/holochain/"}
# holochain_types = { path = "../../../chain/crates/holochain_types/"}
futures = "0.3.1"
tokio = {version = "1.3", features = ["full"]}

