[package]
authors = ["eric@harris-braun.com"]
edition = "2021"
name = "group_coordinator"
version = "0.0.1-alpha1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "group_coordinator"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }

group_integrity = { path = "../../integrity/group" }

[dev-dependencies]
fixt = "*"
futures = { version = "0.3.1", default-features = false }
hdk = { workspace = true, features = ["encoding", "test_utils"] }
holochain = { workspace = true, default-features = false, features = [
  "test_utils",
] }
tokio = { version = "1.3", features = ["full"] }
