[package]
authors = ["eric@harris-braun.com"]
edition = "2021"
name = "membrane_invitations"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "membrane_invitations"

[dependencies]
hc_zome_membrane_invitations_coordinator = { git = "https://github.com/holochain-open-dev/membrane-invitations", branch = "main" }
