[package]
edition = "2021"
name = "profiles_integrity"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "profiles_integrity"

[dependencies]
serde = "1"
derive_more = "0"
hc_zome_profiles_integrity = { git = "https://github.com/holochain-open-dev/profiles", branch = "holochain-0.2.3-beta-rc.1" }
