[package]
authors = ["eric@harris-braun.com"]
edition = "2021"
name = "applet_guis_coordinator"
version = "0.0.1-alpha1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "applet_guis_coordinator"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }


applet_guis_integrity = { path = "../../integrity/applet_guis" }

[dev-dependencies]
#holochain = { git = "https://github.com/holochain/holochain.git", branch = "develop", features = ["test_utils"] }
#holochain_types = { git = "https://github.com/holochain/holochain.git", branch = "develop", features = ["test_utils"] }
# holochain = { path = "../../../chain/crates/holochain/"}
# holochain_types = { path = "../../../chain/crates/holochain_types/"}
nanoid = "0.3"
observability = "0.1.2"
stream-cancel = "0.8.0"
fixt = { workspace = true }
futures = {version = "0.3.1", default-features = false}
hdk = { workspace = true, features = ["encoding", "test_utils"]}
holochain = { workspace = true , default-features = false, features = ["test_utils"]}
tokio = {version = "1.3", features = ["full"]}

