[package]
authors = ["eric@harris-braun.com"]
edition = "2021"
name = "applet_guis_coordinator"
version = "0.0.1-alpha1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "applet_guis_coordinator"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }

applet_guis_integrity = { path = "../../integrity/applet_guis" }

[dev-dependencies]
nanoid = { workspace = true }
observability = { workspace = true }
stream-cancel = { workspace = true }
fixt = { workspace = true }
futures = { workspace = true }
hdk = { workspace = true }
holochain = { workspace = true }
tokio = { workspace = true }

