[package]
authors = ["eric@harris-braun.com"]
edition = "2021"
name = "membrane_invitations_coordinator"
version = "0.0.1-alpha1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "membrane_invitations_coordinator"

[dependencies]
hc_zome_membrane_invitations_coordinator = { git = "https://github.com/holochain-open-dev/membrane-invitations", rev = "f4c1651", package = "hc_zome_membrane_invitations_coordinator" }
