[package]
authors = ["guillem.cordoba@gmail.com", "matthme@protonmail.com"]
description = "MembraneInvitations zome for any Holochain app"
documentation = "https://holochain-open-dev.github.io/membrane_invitations"
edition = "2021"
homepage = "https://docs.rs/hc_zome_membrane_invitations"
license = "MIT"
name = "hc_zome_membrane_invitations_coordinator"
repository = "https://github.com/holochain-open-dev/membrane_invitations"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_membrane_invitations_coordinator"

[dependencies]
derive_more = "0"
serde = { workspace = true }

hc_zome_membrane_invitations_integrity = { path = "../../integrity/membrane_invitations", version = "0.1" }
hdk = { workspace = true }

[dev-dependencies]
fixt = "*"
futures = { version = "0.3.1", default-features = false }
hdk = { workspace = true, features = ["encoding", "test_utils"] }
holochain = { workspace = true, default-features = false, features = [
  "test_utils",
] }
tokio = { version = "1.3", features = ["full"] }
