[package]
authors = ["eric@harris-braun.com"]
edition = "2021"
name = "membrane_invitations_integrity"
version = "0.0.1-alpha1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "membrane_invitations_integrity"

[dependencies]
hc_zome_membrane_invitations_integrity = { git = "https://github.com/holochain-open-dev/membrane-invitations", branch = "main", package = "hc_zome_membrane_invitations_integrity" }
