[package]
edition = "2021"
name = "test_provider"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "test_provider"

[dependencies]
serde = { workspace = true }
chrono = { version = "0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"], optional = true }
derive_more = "0"
test_provider_integrity = { path = "../../integrity/test_provider" }

hdk = { workspace = true }
